# CUE4Parse

./: CUE4Parse.sln
CUE4Parse/: CUE4Parse.csproj
CUE4Parse-Conversion/: IExporter.cs
CUE4Parse-Conversion/Animations/: EAnimFormat.cs
CUE4Parse-Conversion/Animations/UnrealFormat/: UnrealAnim.cs
CUE4Parse-Conversion/Meshes/: EMeshFormat.cs  Gltf.cs  MeshConverter.cs  MeshExporter.cs  PSKExporter.cs
CUE4Parse-Conversion/Meshes/PSK/: CBaseMeshLod.cs  CMeshSection.cs  CMeshVertex.cs  CStaticMesh.cs  CStaticMeshLod.cs  CVertexShare.cs
CUE4Parse-Conversion/Meshes/UnrealFormat/: FMorphTarget.cs  UnrealModel.cs
CUE4Parse-Conversion/UnrealFormat/: EFileCompressionFormat.cs  ExportableUnrealAssetBase.cs  FDataChunk.cs  FString.cs  FUnrealHeader.cs  ISerializable.cs  unreal.py
CUE4Parse-Conversion/Worlds/: EWorldFormat.cs  WorldExporter.cs
CUE4Parse-Conversion/Worlds/UnrealFormat/: FActor.cs  UnrealWorld.cs
CUE4Parse-Extensions/: CUE4Parse-Extensions.csproj  LandscapeDataAccess.cs  LandscapeExporter.cs
CUE4Parse-Natives/: CMakeLists.txt
CUE4Parse/Compression/: Oodle.cs
CUE4Parse/FileProvider/: AbstractFileProvider.cs  DefaultFileProvider.cs
CUE4Parse/FileProvider/Objects/: GameFile.cs
CUE4Parse/FileProvider/Vfs/: AbstractVfsFileProvider.cs
CUE4Parse/GameTypes/FN/Objects/: FGameplayEventFunction.cs
CUE4Parse/MappingsProvider/: MappingsSchema.cs
CUE4Parse/UE4/Assets/: AbstractUePackage.cs  IPackage.cs  IoPackage.cs  Package.cs
CUE4Parse/UE4/Assets/Exports/: EObjectFlags.cs  UObject.cs
CUE4Parse/UE4/Assets/Objects/: FByteBulkData.cs  UScriptMap.cs  UScriptStruct.cs
CUE4Parse/UE4/Assets/Readers/: FAssetArchive.cs  FObjectAndNameAsStringProxyArchive.cs
CUE4Parse/UE4/IO/: IoStoreReader.cs
CUE4Parse/UE4/Readers/: FArchive.cs  FByteArchive.cs
CUE4Parse/UE4/Versions/: EGame.cs  VersionContainer.cs
CUE4Parse/UE4/Writers/: FArchiveWriter.cs
CUE4Parse/Utils/: CUE4ParseNatives.cs  TaskLazy.cs
(+44 files in other folders)
